[package]
name = "clawsh"
version = "0.1.0"
authors = ["Southclaws <accounts@southcla.ws>"]
edition = "2018"

[dependencies]
funty = "=1.1.0" 
deno = "1.5.2"
rustyline = "7.0.0"
starship = "0.47.0"
once_cell = "1.5.2"
clap = "2.33.3"
deno_core = "0.70.0"
tokio = { version = "0.3.5", features = ["full"] }
glob = "0.3.0"
nom = "6.1.0"
jql = "2.9.4"